--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,8 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+body {
+    background-color: #121212;
+    color: #EDEDED;
+}
